--- a/Session4.csproj
+++ b/Session4.csproj
@@ -83,11 +83,11 @@
     <Compile Include="ExpertMain.Designer.cs">
       <DependentUpon>ExpertMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="4.1_Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
+    <Compile Include="4.1_Login.Designer.cs">
+      <DependentUpon>4.1_Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -148,8 +148,8 @@
     <EmbeddedResource Include="ExpertMain.resx">
       <DependentUpon>ExpertMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
+    <EmbeddedResource Include="4.1_Login.resx">
+      <DependentUpon>4.1_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
