--- a/Session4.csproj
+++ b/Session4.csproj
@@ -56,11 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminMain.cs">
+    <Compile Include="4.2_AdminMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminMain.Designer.cs">
-      <DependentUpon>AdminMain.cs</DependentUpon>
+    <Compile Include="4.2_AdminMain.Designer.cs">
+      <DependentUpon>4.2_AdminMain.cs</DependentUpon>
     </Compile>
     <Compile Include="AssignTraining.cs">
       <SubType>Form</SubType>
@@ -136,8 +136,8 @@
     <Compile Include="User_Type.cs">
       <DependentUpon>Session4Model.tt</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AdminMain.resx">
-      <DependentUpon>AdminMain.cs</DependentUpon>
+    <EmbeddedResource Include="4.2_AdminMain.resx">
+      <DependentUpon>4.2_AdminMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AssignTraining.resx">
       <DependentUpon>AssignTraining.cs</DependentUpon>
