--- a/Session4.csproj
+++ b/Session4.csproj
@@ -91,11 +91,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AdminTrainingProgress.cs">
+    <Compile Include="4.5_AdminTrainingProgress.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdminTrainingProgress.Designer.cs">
-      <DependentUpon>AdminTrainingProgress.cs</DependentUpon>
+    <Compile Include="4.5_AdminTrainingProgress.Designer.cs">
+      <DependentUpon>4.5_AdminTrainingProgress.cs</DependentUpon>
     </Compile>
     <Compile Include="Session4Model.Context.cs">
       <AutoGen>True</AutoGen>
@@ -160,8 +160,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AdminTrainingProgress.resx">
-      <DependentUpon>AdminTrainingProgress.cs</DependentUpon>
+    <EmbeddedResource Include="4.5_AdminTrainingProgress.resx">
+      <DependentUpon>4.5_AdminTrainingProgress.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdateCompetitors.resx">
       <DependentUpon>UpdateCompetitors.cs</DependentUpon>
